Sigil 0.5.3 TBA
    - Fix issue 1266: Store user dictionary as UTF-8.
    - Ensure the checkmarks in add semantic are set correctly when selecting
      multiple files.
    - Fix issue 1030: Don't close if canceling out of a failed save.
    - Fix issue 1258: Find/Replace step by step in All HTML files is broken.

Sigil 0.5.2 2012.02.09
    - Fix issue 1253: Replace All in All HTML files adds extra blank lines in
      style section.
    - Fix issue 1251: Merge does not work if you previously used split chapter.
    - Fix issue 1249: Replace All in All HTML Files leaves cursor at the
      bottom.
    - Fix issue 1247: Cannot rename file extension in book browser and rename
      selected should default to first extension name.
    - Fix issue 1238: Deleting a file does not go to the next closest entry
      in book browser.
    - Fix issue 1236: Replace All in Current file does not center cursor.
    - Fix issue 1234: Switching from Code View to Split View and SplitCV to
      CV does not vertically center the cursor.
    - Fix issue 1237: Rename does not keep current selection in book browser.
    - Fix issue 1242: Metadata::FreeFormMetadata missing assignment line 360.
    - Fix issue 1235: Deleting one file does not give a warning dialog.
    - Fix issue 1129: Crash when importing existing image.

Sigil 0.5.1 2012.02.05
    - Issue 1225:
      * Add searching selected files.
      * Add search wrapping.
      * Replace in BV automatically goes to CV.
      * Fixed bug where in CV if you do a replace of a word and then replace
        all when there are the same words on the page, the page view wouldn't
        be refreshed.
      * Various fixes.
    - Add English translation file used for plural strings.
    - Implement issue 986: Automatically renumber playorder in TOC NCX.
    - Implement issue 1224: F&R modifications to update layout and add Regex Multiline.
    - Fix issue 1214: Dictionary files do not include hypen files or GB files.