@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -161,7 +161,7 @@
            </sizepolicy>
           </property>
           <property name="toolTip">
-           <string>Count all matches in Code View</string>
+           <string>Count all matches (all/selected files uses Code View)</string>
           </property>
           <property name="styleSheet">
            <string notr="true"/>
